start on a newsletter text generator

--- a/giving/recipients/templates/recipients/header.html
+++ b/giving/recipients/templates/recipients/header.html
@@ -11,9 +11,27 @@
                 column-gap: 10px;
             }
             li { height: 30px; white-space: nowrap; }
-            .header { height: 30px; background-color: white; }
+            .header { height: 50px; background-color: white; }
         </style>
     </head>
     <body>
 
-    <div class="header"></div>
+    <div class="header">
+
+  <!-- Begin MailChimp Signup Form -->
+  <div align="right">
+  <form action="//progressivegiving.us14.list-manage.com/subscribe/post?u=a145f86661d2cddaeb58bfd6b&amp;id=40ff3d6950" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div>
+          For an in-depth review of one new donation recipient per week, sign up here:<br>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a145f86661d2cddaeb58bfd6b_40ff3d6950" tabindex="-1" value=""></div>
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"><br>
+      </div>
+  </form>
+  <hr align="right" width="405px">
+  </div>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
+</div>
