--- a/giving/recipients/templates/recipients/footer.html
+++ b/giving/recipients/templates/recipients/footer.html
@@ -1,10 +1,12 @@
 {% load staticfiles %}
 
-<center>
-<a href="https://twitter.com/ProgressGive" target="_blank">
-  <img src="{% static 'twitter.png' %}" alt="Twitter" height="50" width="50">
-</a>
-</center>
+<div align="center">
+
+  <a href="https://twitter.com/ProgressGive" target="_blank">
+    <img src="{% static 'twitter.png' %}" alt="Twitter" height="50" width="50">
+  </a>
+
+</div>
 
 </body>
 </html>
