--- a/giving/recipients/templates/recipients/header.html
+++ b/giving/recipients/templates/recipients/header.html
@@ -1,7 +1,11 @@
 <html>
     <head>
         <style type='text/css'>
-            * {color:black; font-family: Arial, Helvetica, sans-serif; font-size: 12px;}
+            * {
+                color:black;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 12px;
+            }
             ul {
                 -moz-column-count: 3;
                 -moz-column-gap: 10px;
@@ -9,9 +13,11 @@
                 -webkit-column-gap: 10px;
                 column-count: 3;
                 column-gap: 10px;
+                list-style-type: none;
             }
             li { height: 30px; white-space: nowrap; }
             .header { height: 50px; background-color: white; }
+            a:link, a:visited, a:hover, a:active { text-decoration: none; }
         </style>
     </head>
     <body>
