--- a/giving/recipients/templates/recipients/header.html
+++ b/giving/recipients/templates/recipients/header.html
@@ -1,43 +1,18 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <style type='text/css'>
-            * {
-                color:black;
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 12px;
-            }
-            ul {
-                -moz-column-count: 2;
-                -moz-column-gap: 30px;
-                -webkit-column-count: 2;
-                -webkit-column-gap: 30px;
-                column-count: 2;
-                column-gap: 30px;
-                list-style-type: none;
-            }
-            li { height: 30px; white-space: nowrap; }
-            .header { height: 50px; background-color: white; }
-            a:link, a:visited, a:hover, a:active { text-decoration: none; }
-        </style>
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
-    <div class="header">
-
-  <!-- Begin MailChimp Signup Form -->
-  <div align="right">
-  <form action="//progressivegiving.us14.list-manage.com/subscribe/post?u=a145f86661d2cddaeb58bfd6b&amp;id=40ff3d6950" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div>
-          For an in-depth review of one new donation recipient per week, sign up here:<br>
-          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a145f86661d2cddaeb58bfd6b_40ff3d6950" tabindex="-1" value=""></div>
-          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"><br>
-      </div>
-  </form>
-  <hr align="right" width="405px">
-  </div>
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
-
-</div>
+    <link rel="stylesheet" href="/static/css/normalize.css">
+    <link rel="stylesheet" href="/static/css/skeleton.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script defer src="/static/js/main.js"></script>
+  </head>
+<body>
+  
