--- a/giving/blog/templates/blog/view_post.html
+++ b/giving/blog/templates/blog/view_post.html
@@ -15,5 +15,5 @@
 
 </div>
 
-{% include "giving/footer.html" %}
+{% include "blog/footer.html" %}
 {% include "recipients/newsletter_signup.html" %}
