--- a/giving/recipients/templates/recipients/index.html
+++ b/giving/recipients/templates/recipients/index.html
@@ -4,6 +4,8 @@
 
 {% include "recipients/newsletter_signup.html" %}
 
+{% include "recipients/about.html" %}
+
 <div class="container">
   <div class="row category-list">
     
