clean up About text

--- a/giving/recipients/templates/recipients/about_page.html
+++ b/giving/recipients/templates/recipients/about_page.html
@@ -6,15 +6,29 @@
 
     <h2>Put your money where your heart is - donate to causes and candidates that make the world a better place.</h2>
 
-    <p>Tech friends (and others), I have a favor to ask. I know a lot of you want to help save the world. Some of you have more money than time, but I'm here to tell you that there are more places to donate to out there than just the ACLU and Planned Parenthood.</p>
+    <p>Tech friends (and others), I have a favor to ask. I know a lot of you want to help save the world. Some of you have more money than time, and so it's good that you're donating. The ACLU and Planned Parenthood are great places to start, but there are a lot more organizations out there who could use your help.</p>
+
+    <p>The fight ahead is going to be a tough one. We've got a lot of work to do if we want to stop fascism and keep hate from becoming the new normal. Here's the thing, though - there are organizations out there who have been doing this stuff for years. They're much more prepared for this than any one of us alone - the most efficient thing you can do is support them.</p>
 
     <p>That’s where <a href="https://twitter.com/ProgressGive" target="new">ProgressGive</a> comes in.</p>
 
-    <p>This Twitter bot and web site is sitting on top of a database of 500+ orgs (and growing). The bot posts 4 times a day, but if you aren't able to donate, you can always retweet. And you can always find the complete list of sites to donate to here at progressivegiving.com.</p>
+    <p>The Twitter bot and this web site are sitting on top of a database of 500+ orgs (and growing). The bot posts 4 times a day, with links to NGOs, 501(c)(3)s, charities, and other types of organizations. Follow the Twitter account and learn how you can:
+    <ul>
+    <li>strengthen labor</li>
+    <li>fight racism</li>
+    <li>help refugees, and more</li>
+    </ul>
+    Learn about candidates all over the country who are up for re-election and support them with a donation. Find local organizations you can get involved with to support civil rights and women's reproductive rights. Give a bigger voice to folks around the country who are advocating for sensible gun laws. You can always find the complete list of sites to donate to here at progressivegiving.com. Throw your money at them!</p>
+
+    <p>And if you can't give, how about RT'ing a tweet or sharing a Facebook post? Amplifying voices and spreading the word always helps.</p>
 
     <p>We’ll eventually add some fancy features like ... replying to followers with suggested charities? For now I just want to give these organizations some more exposure, match people who want to give with charities they might not have known about before.</p>
 
     <p>So, that favor - if you're on Twitter, help us out and follow <a href="https://twitter.com/ProgressGive" target="new">ProgressGive</a> (and tell your friends about it!).</p>
+
+    <p><blockquote><blockquote><a href="https://www.theguardian.com/us-news/2016/dec/25/progressive-donations-us-election-planned-parenthood-aclu" target="new">Progressive causes see 'unprecedented' upswing in donations after US election</a></blockquote></blockquote></p>
+    
+    <p><blockquote><blockquote><a href="https://www.entrepreneur.com/video/287016" target="new">The Biochemical Reason Helping Others Is Good for You</a></blockquote></blockquote></p>
 
 </div>
 
