--- a/giving/recipients/templates/recipients/newsletter_signup.html
+++ b/giving/recipients/templates/recipients/newsletter_signup.html
@@ -1,7 +1,15 @@
 <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+
 <div class="newsletter">
   <div class="container">
-  <form action="//progressivegiving.us14.list-manage.com/subscribe/post?u=a145f86661d2cddaeb58bfd6b&amp;id=40ff3d6950" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+    <form action="//progressivegiving.us14.list-manage.com/subscribe/post?u=a145f86661d2cddaeb58bfd6b&amp;id=40ff3d6950" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div class="row">
       <div class="twelve columns">
         <p class="u-smallcaps">
@@ -9,21 +17,20 @@
         </p>
       </div>
     </div> {# .row #}
-    
+
     <div class="row">
       <div class="nine columns">
-        <input type="email" class="u-full-width" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a145f86661d2cddaeb58bfd6b_40ff3d6950" tabindex="-1" value=""></div>
+            <input type="email" class="u-full-width" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a145f86661d2cddaeb58bfd6b_40ff3d6950" tabindex="-1" value=""></div>
       </div>
-      
+
       <div class="three columns">
         <input class="button-primary" name="subscribe" type="submit" value="Subscribe" id="mc-embedded-subscribe">
       </div>
     </div> {# .row #}
-    
+    </form>
 
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
   </div> {# .container #}
 </div> {# .newsletter #}
