--- a/giving/recipients/templates/recipients/newsletter_signup.html
+++ b/giving/recipients/templates/recipients/newsletter_signup.html
@@ -12,7 +12,7 @@
     <form action="//progressivegiving.us14.list-manage.com/subscribe/post?u=a145f86661d2cddaeb58bfd6b&amp;id=40ff3d6950" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div class="row">
       <div class="twelve columns">
-        <p class="u-smallcaps">
+        <p class="u-smallcaps newsletter__text">
           For an in-depth review of one new donation recipient per week, sign up here:
         </p>
       </div>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="three columns">
-        <input class="button-primary" name="subscribe" type="submit" value="Subscribe" id="mc-embedded-subscribe">
+        <input class="newsletter__button button" name="subscribe" type="submit" value="Subscribe" id="mc-embedded-subscribe" tabindex="0">
       </div>
     </div> {# .row #}
     </form>
