--- a/giving/recipients/templates/recipients/about.html
+++ b/giving/recipients/templates/recipients/about.html
@@ -8,7 +8,7 @@
       <div class="about__text ten columns">
         <p>
           Progressive Giving helps you decide which progressive groups need your money and effort.
-          <a href="/about/">Read more &rarr;</a>
+          <a class="button button-primary" href="/about/">Read more &rarr;</a>
           
         </p>
       </div>
