--- a/giving/recipients/templates/recipients/header.html
+++ b/giving/recipients/templates/recipients/header.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Titillium+Web:700i,900" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/normalize.css">
     <link rel="stylesheet" href="/static/css/skeleton.css">
     <link rel="stylesheet" href="/static/css/index.css">
