Add an FAQ and do a bunch of other stuff.

--- a/giving/recipients/templates/recipients/about.html
+++ b/giving/recipients/templates/recipients/about.html
@@ -1,17 +1,29 @@
 
 <div class="about">
-  <div class="container">
-    <div class="row">
-      <div class="about__logo two columns">
-        <img src="/static/img/logo.png" />
-      </div>
-      <div class="about__text ten columns">
-        <p>
-          Progressive Giving helps you decide which progressive groups need your money and effort.
-          <a class="button button-primary" href="/about/">Read more &rarr;</a>
-          
-        </p>
-      </div>
-    </div> {# .row #}
-  </div> {# .container #}
+  <div class="about__description">
+    <div class="container">
+      <div class="row">
+        <div class="about__logo two columns">
+          <img src="/static/img/logo.png" />
+        </div>
+        <div class="about__text ten columns">
+          <p>
+            Progressive Giving helps you decide which progressive groups need your money and effort.          
+          </p>
+        </div>
+      </div> {# .row #}
+    </div> {# .container #}
+  </div> {# .about__description #}
+  <div class="about__menu">
+    <div class="container about__menu">
+      <div class="row">
+        <div class="about__menu-item three columns">
+          <a href="/about">About this site</a>
+        </div>
+        <div class="about__menu-item three columns">
+          <a href="/blog">Weblog</a>
+        </div>
+      </div> {# .row #}
+    </div> {# .container #}
+  </div> {# .about__menu #}
 </div> {# .about #}
