--- a/giving/recipients/templates/recipients/header.html
+++ b/giving/recipients/templates/recipients/header.html
@@ -11,6 +11,8 @@
     
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script defer src="/static/js/main.js"></script>
+    
+    <script src="https://use.fontawesome.com/84d0ee191f.js"></script>
   </head>
 <body>
   
