--- a/giving/recipients/static/css/index.css
+++ b/giving/recipients/static/css/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 18px;
 }
 
 h2 {
@@ -11,6 +12,11 @@ h2 {
   font-weight: bold;
   letter-spacing: 2px;
   line-height: 1.2;
+}
+
+.u-off-screen {
+  position: absolute;
+  left: -9999px;
 }
 
 .picker {
@@ -25,21 +31,33 @@ h2 {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
-  line-height: 1;
-  font-size: 80%;
+  line-height: 1.3;
+  font-size: 2rem;
   margin-bottom: 2vh;
 }
 
 @media (min-width: 550px) {
   .picker aside {
-    font-size: 2vw;
+    font-size: 2.5vw;
+  }
+}
+
+@media (min-width: 750px) {
+  .picker aside {
+    font-size: 2.5vw;
   }
 }
 
 /* The name of the organization */
 .picker__recipient {
   font-family: 'Titillium Web', sans-serif;
-  font-size: 10vw;
+  font-size: 4rem;
+}
+
+@media (min-width: 550px) {
+  .picker__recipient {
+    font-size: 10vw;
+  }
 }
 
 /* We make the name smaller for orgs with very long names */
@@ -76,9 +94,21 @@ h2 {
 }
 
 .twitter__text {
-  font-size: 24px;
+  font-size: 18px;
   line-height: 130%;
   margin-top: 1rem;
+}
+
+@media (min-width: 550px) {
+  .twitter__text {
+    font-size: 3vw;
+  }
+}
+
+@media (min-width: 750px) {
+  .twitter__text {
+    font-size: 24px;
+  }
 }
 
 
@@ -114,7 +144,7 @@ input[type="submit"].newsletter__button:active {
 }
 
 .about {
-  padding: 2em 0;
+  padding: 2rem 0 0;
   color: #fff;
   background-color: #000;
 }
@@ -125,13 +155,51 @@ input[type="submit"].newsletter__button:active {
   height: auto;
 }
 
+.about__description {
+  padding-bottom: 2rem;
+}
+
 .about__text {
   font-size: 20px;
 }
 
+.about__text p {
+  margin-bottom: 1rem;
+}
+
 .about .button-primary {
+  display: inline-block;
   font-size: 14px;
   margin-top: 5px;
+}
+
+.about__menu {
+  background-color: #222;
+}
+
+.about__menu-item {
+  font-size: 1.6rem;
+  font-weight: normal;
+  color: #aaa;
+}
+
+@media (max-width: 549px) {
+  /* On narrow screens, we display the menu choices as a simple list. */
+  .about__menu-item {
+    width: 96%;
+  }
+}
+
+.about__menu-item a:link {
+  padding: 1rem;
+  display: block;
+  color: #ccc;
+  text-decoration: none;
+  text-align: center;
+}
+
+.about__menu-item a:hover {
+  background-color: #333;
 }
 
 .categories {
@@ -139,11 +207,19 @@ input[type="submit"].newsletter__button:active {
 }
 
 .categories__text {
-  margin: 3vw 0;
+  margin: 3rem 0 2rem;
   font-size: 28px;
   letter-spacing: -1px;
   text-align: center;
   line-height: 130%;
+  font-family: 'Titillium Web', sans-serif;
+  font-style: italic;
+}
+
+@media (min-width: 550px) {
+  .categories__text {
+    margin-bottom: 3rem;
+  }
 }
 
 .categories__list {
@@ -157,7 +233,7 @@ input[type="submit"].newsletter__button:active {
 
 
 .categories__category {
-  margin-top: 3rem;
+  margin-top: 1rem;
   min-width: 96%;
   flex: 0 0 auto;
   flex-grow: 1;
@@ -263,4 +339,80 @@ ul.categories__org-list {
   font-family: 'Titillium Web', sans-serif;
   font-style: italic;
   color: #000;
+}
+
+
+.about-page strong {
+  border-radius: 6px;
+/*  border: 1px solid #F49;*/
+  padding: 0 0.2rem;
+  background-color: #ff8cce;
+  box-shadow: 0.2rem 0 0 #ff8cce, -0.2rem 0 0 #ff8cce;
+}
+
+.about-page strong a:link {
+  color: #000;
+}
+
+.faq {
+  font-size: 18px;
+}
+
+.faq__title {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+  font-family: 'Titillium Web', sans-serif;
+  font-style: italic;
+}
+
+.faq h3 {
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 1rem;
+}
+
+.about-text {
+}
+
+.about-text .about-text__title {
+  margin-top: 2rem;
+  font-family: 'Titillium Web', sans-serif;
+  font-style: italic;
+  line-height: 1.1;
+}
+
+.footer {
+  padding: 3vh 0;
+  background: #000;
+  color: #fff;
+}
+
+.footer a:link {
+  color: #fff;
+}
+
+.footer__link {
+  font-size: 4em;
+}
+
+@media (max-width: 549px) {
+  .footer__link {
+    width: 48%;
+  }
+}
+
+@media (min-width: 550px) {
+
+  .footer__icons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer__link {
+    flex: 1 1 auto;
+  }
+}
+
+.footer__icon {
+  text-align: center;
 }
