Clean up the category page a bit. Add twitter icons on the category page (I’ll add them on the front page soon).

--- a/giving/recipients/static/css/index.css
+++ b/giving/recipients/static/css/index.css
@@ -416,3 +416,13 @@ ul.categories__org-list {
 .footer__icon {
   text-align: center;
 }
+
+.category__title {
+  margin-top: 2rem;
+  font-family: 'Titillium Web', sans-serif;
+  text-transform: capitalize;
+}
+
+.category__twitter-link {
+  text-decoration: none;
+}
