--- a/giving/recipients/templates/recipients/about.html
+++ b/giving/recipients/templates/recipients/about.html
@@ -4,7 +4,9 @@
     <div class="container">
       <div class="row">
         <div class="about__logo two columns">
-          <img src="/static/img/logo.png" />
+          <a href="/">
+            <img src="/static/img/logo.png" />
+          </a>
         </div>
         <div class="about__text ten columns">
           <p>
