expand columns on category page

--- a/giving/recipients/templates/recipients/category.html
+++ b/giving/recipients/templates/recipients/category.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row category-list">
 
-    <section class="category six columns">
+    <section class="category twelve columns">
       <h2 class="category__title">{{ category }}</h2>
 
       <ul class="category__list">
